--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ body {
 .buttons-wrapper {
     display: flex
 }
-.buttons-wrapper button {
+.buttons-wrapper a {
     margin-right: 20px;
 }
 .buttons-wrapper button:last-child {
