--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,19 @@ p span.code {
     }
 }
 
+@media (max-width: 500px) {
+    .controls-wrapper select {
+        height: 30px;
+        padding: 0 5px;
+        margin-right: 10px;
+    }
+    .controls-wrapper .button-1 {
+        font-size: 14px;
+        line-height: 26px;
+        padding: 0 10px;
+    }
+}
+
 @media (max-width: 400px) {
     .adp-logo-wrapper h1 {
         font-size: 28px;
@@ -248,6 +261,9 @@ p span.code {
     }
     .buttons-wrapper a {
         margin-right: 10px;
+    }
+    .controls-wrapper .button-1 {
+        padding: 0 5px;
     }
 }
 
